# Django_VPN

./: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
VPNService/: config.py  db.sqlite3  manage.py
VPNService/VPNService/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
VPNService/core/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
VPNService/core/migrations/: 0001_initial.py  0002_portals.py  0003_portals_page_views.py
VPNService/core/templates/: base.html  home.html  login.html  portal.html  portal_hub.html  proxy.html  proxy_view.html  registration.html
